apps/media/overseer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseer
spec:
  selector:
    matchLabels:
      app: overseer
  template:
    metadata:
      labels:
        app: overseer
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - pc
      containers:
        - name: overseer
          image: lscr.io/linuxserver/overseerr:latest
          ports:
            - containerPort: 8989
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseer-config
