apps/media/overseer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseer
spec:
  selector:
    app: overseer
  ports:
    - port: 5055
      targetPort: 5055
